--- a/app/components/styles/Navbar.module.scss
+++ b/app/components/styles/Navbar.module.scss
@@ -1,3 +1,6 @@
+@import '../../styles/variables';
+@import '../../styles/mixins';
+@import '../../styles/grid';
 %flex-layout {
     width: 100%;
     display: flex;
@@ -10,18 +13,36 @@
     @extend %flex-layout;
     padding: $base-padding $base-padding * 2;
     box-shadow: $base-box-shadow;
-
-    .site-title {
-        font-size: $font-size-lg;
+    background-color: $secondary-light;
+    h1 {
+        font-size: $font-size-xxl;
     }
     .container {
-        @extend %flex-layout;
-    }
-}
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 $base-padding;
+        text-align: center;
 
-@each $key, $val in $colors {
-    .navbar-#{$key} {
-        @extend .navbar;
-        background-color: $val;
+        .titleContainer > * {
+            padding: 0;
+            margin: 0;
+            font-weight: 500;
+            
+        }
+        p {
+            font-size: $font-size-lg;
+        }
+
+        a {
+            color: black;
+            padding: 0 $base-padding;
+            text-decoration: none;
+            font-size: $font-size-lg;
+
+            &:hover {
+                color: white;
+            }
+        }
     }
 }
