--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -1,17 +1,15 @@
 @import 'variables';
 @import 'mixins';
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=DM+Sans:opsz@9..40&family=Raleway:wght@300;700&family=Vollkorn+SC:wght@900&display=swap');
 
 html,
 body {
     padding: 0;
     margin: 0;
-    
+    min-height: 100%  
 }
 
-h1 {
-    color: $secondary-light;
+.light-text {
+    font-family: 'Raleway', sans-serif;
 }
 
-a {
-    @include anchorStyles;
-}
