--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -7,6 +7,14 @@
   padding: 0 20px;
   box-sizing: border-box;
 }
+@mixin textBox(){
+  background-color: $primary-light;
+  opacity: 0.8;
+  padding: $base-padding;
+  font-size: $font-size-xxl;
+  text-align: center;
+  font-family: $light-font;
+}
 
 $breakpoints: (
     "xs": 0,
