--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -21,6 +21,8 @@ $base-border-thickness: 1px;
 $base-border-radius: 20px;
 //box-shadow
 $base-box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+//font
+$light-font: 'Raleway', sans-serif;
 //font sizes
 $base-font-size: 1rem;
 $font-size-sm: $base-font-size * 0.75;
