--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -3,10 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=DM+Sans:opsz@9..40&family=Raleway:wght@300;700&family=Vollkorn+SC:wght@900&display=swap');
 
 html,
-body {
+body,
+main {
     padding: 0;
     margin: 0;
-    min-height: 100%  
+    height: 100%  
 }
 
 .light-text {
