--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -17,14 +17,20 @@
 }
 
 $breakpoints: (
-    "xs": 0,
-    "sm": 480px,
-    "md": 720px,
-    "lg": 960px,
-    "xl": 1200px
+  "xxs": 0,
+  "xs": 480px,
+  "sm": 640px,
+  "md": 768px,
+  "lg": 1024px,
+  "xl": 1280px,
+  "xxl": 1536px
 );
 
-
+@mixin xxs {
+  @media (min-width: map-get($breakpoints, "xxs")) {
+      @content;
+  }
+}
 @mixin xs {
     @media (min-width: map-get($breakpoints, "xs")) {
         @content;
@@ -49,6 +55,11 @@ $breakpoints: (
     @media (min-width: map-get($breakpoints, "xl")) {
         @content;
     }
+}
+@mixin xxl {
+  @media (min-width: map-get($breakpoints, "xxl")) {
+      @content;
+  }
 }
 
 @mixin breakpoint($bp: 0) {
