--- a/app/styles/Home.module.scss
+++ b/app/styles/Home.module.scss
@@ -172,6 +172,7 @@
  
     .pictureContainer{
       width: 50%;
+      height: auto;
       position: absolute;
       right: -10%;
       top: -15%;
